<resources>
    <string name="app_name_english">MovieBomber</string>
    <string name="app_name_chinese">電影別雷</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- global -->
    <string name="app_link">https://play.google.com/store/apps/details?id=com.moviebomber</string>
    <string name="banner_ad_unit_id">ca-app-pub-9651803548105463/7415023435</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9651803548105463/2632753430</string>
    <string name="font_roboto_medium">sans-serif-medium</string>
    <string name="font_roboto_regular">sans-serif</string>
    <string name="default_username">電影別雷開發者</string>
    <string name="default_email">moviebomber@gmail.com</string>
    <string name="loading">載入中，請稍等&#8230;</string>
    <string name="test_movie_name">Star Wars星際大戰</string>
    <string name="test_release_date">2015/03/17</string>
    <string name="test_duration">2小時18分</string>
    <string name="test_description">我沒有朋友，我只有家人這句話是《玩命關頭》系列的縮影，可以套用到出生入死的劇中團隊，還有陣容堅強的劇組人員，大家前後合作了七部電影，感情不亞於任何血緣關係。《玩命關頭》15年前開拍，任誰都沒想到洛杉磯起家的街頭車手傳說，會變成全球最流行、最不敗的動作續集電影。</string>
    <string name="text_good_bomber">好雷</string>
    <string name="text_normal_bomber">普雷</string>
    <string name="text_bad_bomber">負雷</string>
    <string name="photo_resize">500</string>
    <string name="text_padding">開發者知道各位電影愛好者有這些功能需求，目前正在趕工中，敬請期待，謝謝你們的支持！！</string>
    <string name="button_blog">前往開發者部落格</string>
    <string name="blog">http://enginebai.logdown.com</string>
    <string name="share_message">我推薦你一起來看</string>

    <!-- error -->
    <string name="error_fail_to_load_list">Oops!載入電影列表失敗!!</string>
    <string name="error_fail_to_load_detail">Oops!無法載入電影資訊!!</string>

    <!-- api -->
    <string name="api_host">http://aams.us.to:5000</string>
    <string name="api_root">/api/moviebomber</string>
    <string name="api_movie_list">/list/movie_info</string>
    <string name="photo_root">http://aams.us.to:8080/moviebomber</string>

    <!-- menu -->
    <string name="menu_movie_list">電影列表</string>
    <string name="menu_theater_list">影院列表</string>
    <string name="menu_favorite">我的最愛</string>
    <string name="menu_track">追蹤清單</string>
    <string name="menu_account">帳號</string>
    <string name="menu_search">搜尋</string>
    <string name="menu_feedback">意見回饋</string>
    <string name="menu_comment">撰寫評論</string>
    <string name="menu_setting">設定</string>

    <!-- movie page/list -->
    <string name="tab_movie_thisweek">本週新片</string>
    <string name="tab_movie_intheater">上映中</string>
    <string name="tab_movie_comingsoon">即將上映</string>
    <string name="warn_no_more_movies">沒有更多電影囉!</string>
    <string name="warn_no_movies">目前沒有任何電影!</string>
    <string name="arc_good_bomber">推薦</string>
    <string name="arc_normal_bomber">普通</string>
    <string name="arc_bad_bomber">爛片</string>
    <string name="button_order">觀看詳情</string>
    <string name="fab_sort_lastest">依日期(新到舊)排序</string>
    <string name="fab_sort_bomber">依好雷數排序</string>
    <string name="fab_sort_oldest">依日期(舊到新)排序</string>

    <!-- movie detail -->
    <string name="fab_share">分享</string>
    <string name="fab_photo">照片</string>
    <string name="fab_trailer">預告片</string>
    <string name="fab_comment">評論</string>
    <string name="fab_order">訂票</string>
    <string name="text_release_date">上映日期</string>
    <string name="text_description">劇情簡介</string>
    <string name="text_duration">片長</string>
    <string name="text_genre">類型</string>
    <string name="text_director">導演</string>
    <string name="text_actors">領銜主演</string>
    <string name="text_more">展開簡介</string>
    <string name="text_less">收合簡介</string>
    <string name="title_activity_photo_list">PhotoListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_trailer">TrailerActivity</string>

    <string name="button_trailer_more">搜尋更多預告片</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="tab_comment_ptt">PTT電影版</string>
    <string name="tab_comment_yahoo">Yahoo電影短評</string>
    <string name="title_activity_web_view">WebViewActivity</string>

</resources>
