<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:fab="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             tools:context="com.moviebomber.ui.activity.MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            style="@style/ToolbarOverlay"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/image_photo"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/user_cover_a"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:id="@+id/text_title_chinese"
            android:layout_below="@id/image_photo"
            android:background="@color/primary"
            android:textAppearance="?android:textAppearanceLarge"
            android:fontFamily="@string/font_roboto_medium"
            android:textColor="@color/text"
            android:padding="20dp"
            tools:text="@string/test_movie_name"
            android:gravity="center_vertical"/>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="206dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            fab:fab_addButtonColorNormal="@color/accent"
            fab:fab_addButtonColorPressed="@color/accent_light"
            fab:fab_addButtonPlusIconColor="@android:color/white"
            fab:fab_labelStyle="@style/FloatingActionBarTextMenu"
            fab:fab_expandDirection="down"
            >

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@android:color/white"
                fab:fab_title="@string/fab_share"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_addButtonSize="mini"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@android:color/white"
                fab:fab_title="@string/fab_photo"
                fab:fab_colorPressed="@color/white_pressed"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@android:color/white"
                fab:fab_title="@string/fab_trailer"
                fab:fab_colorPressed="@color/white_pressed"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@android:color/white"
                fab:fab_title="@string/fab_comment"
                fab:fab_colorPressed="@color/white_pressed"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title_chinese">
            <TableRow>
                <TextView
                    style="@style/MovieDetailTitle"
                    android:text="@string/text_release_date"/>
                <TextView
                    style="@style/MovieDetailContent"
                    android:id="@+id/text_release_date"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/MovieDetailTitle"
                    android:text="@string/text_description"/>
                <TextView
                    style="@style/MovieDetailContent"
                    android:id="@+id/text_description"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/MovieDetailTitle"
                    android:text="@string/text_duration"/>
                <TextView
                    style="@style/MovieDetailContent"
                    android:id="@+id/text_duration"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/MovieDetailTitle"
                    android:text="@string/text_genre"/>
                <TextView
                    style="@style/MovieDetailContent"
                    android:id="@+id/text_genre"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/MovieDetailTitle"
                    android:text="@string/text_director"/>
                <TextView
                    style="@style/MovieDetailContent"
                    android:id="@+id/text_director"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/MovieDetailTitle"
                    android:text="@string/text_actors"/>
                <TextView
                    style="@style/MovieDetailContent"
                    android:id="@+id/text_actors"/>
            </TableRow>

            </TableLayout>
    </RelativeLayout>
</ScrollView>