<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:fab="http://schemas.android.com/apk/res-auto"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="com.moviebomber.ui.activity.MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/image_photo"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/user_cover_a"
            />

        <include
            layout="@layout/toolbar_overlay"
            android:id="@+id/toolbar"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/image_photo"
            android:id="@+id/layout_movie_content"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="vertical"
                android:id="@+id/layout_title"
                >

                <TextView
                    style="@style/MovieDetailList"
                    android:id="@+id/text_release_date"
                    tools:text="@string/test_release_date"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_event_white_24dp"
                    />

                <TextView
                    style="@style/MovieDetailList"
                    android:id="@+id/text_duration"
                    tools:text="@string/test_duration"
                    android:layout_marginBottom="4dp"
                    android:drawableLeft="@drawable/ic_schedule_white_24dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.rey.material.widget.Button
                    style="@style/MovieDetailButton"
                    android:id="@+id/button_photo"
                    android:text="@string/fab_photo"
                    android:drawableTop="@drawable/ic_dashboard_black_36dp"
                    android:background="@null"
                    app:rd_rippleType="wave"
                    android:textColor="@color/secondary_text"
                    app:rd_rippleColor="@color/accent_light"
                    app:rd_enable="true"
                    />

                <com.rey.material.widget.Button
                    style="@style/MovieDetailButton"
                    android:text="@string/fab_trailer"
                    android:drawableTop="@drawable/ic_local_movies_black_36dp"
                    android:id="@+id/button_trailer"
                    android:background="@null"
                    app:rd_rippleType="wave"
                    android:textColor="@color/secondary_text"
                    app:rd_rippleColor="@color/accent_light"
                    app:rd_enable="true"
                    />

                <com.rey.material.widget.Button
                    style="@style/MovieDetailButton"
                    android:text="@string/fab_comment"
                    android:drawableTop="@drawable/ic_thumbs_up_down_black_36dp"
                    android:id="@+id/button_comment"
                    android:background="@null"
                    app:rd_rippleType="wave"
                    android:textColor="@color/secondary_text"
                    app:rd_rippleColor="@color/accent_light"
                    app:rd_enable="true"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                style="@style/MovieDetailContent"
                android:id="@+id/text_description"
                tools:text="@string/test_description"
                />

            <com.rey.material.widget.Button
                android:id="@+id/button_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_more"
                android:textColor="@color/accent"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@null"
                app:rd_style="@style/Material.Drawable.Ripple.Wave.Light"
                app:rd_enable="true"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_title_chinese"
            android:fontFamily="@string/font_roboto_medium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:background="@color/half_transparent"
            android:padding="16dp"
            tools:text="@string/test_movie_name"
            android:gravity="center_vertical"
            android:layout_above="@id/layout_movie_content"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/pink_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/abc_btn_rating_star_off_mtrl_alpha"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/accent_light"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="265dp"/>
    </RelativeLayout>
</ScrollView>