<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/card_movie_list_item"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/image_movie_cover"
                android:contentDescription="@null"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/user_cover"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:id="@+id/image_movie_poster"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="170dp"/>

            <TextView
                android:id="@+id/text_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:fontFamily="@string/font_roboto_medium"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/test_movie_name"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/image_movie_poster"
                android:layout_below="@id/image_movie_cover"
                android:padding="8dp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_release_date"
                tools:text="@string/test_release_date"
                android:layout_alignLeft="@id/text_movie_name"
                android:layout_below="@id/text_movie_name"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:drawableLeft="@drawable/abc_btn_check_to_on_mtrl_015"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_duration"
                tools:text="@string/test_duration"
                android:layout_below="@id/text_release_date"
                android:layout_alignLeft="@id/text_release_date"
                android:paddingLeft="8dp"
                android:drawableLeft="@drawable/abc_btn_check_to_on_mtrl_000"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <android.support.v7.widget.CardView
                style="@style/MovieListItemCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/card_good_bomber">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/BomberCountTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_good_bomber"
                        />

                    <TextView
                        style="@style/BomberCountContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="140"
                        android:textColor="@android:color/holo_blue_dark"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/MovieListItemCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/card_normal_bomber">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/BomberCountTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_normal_bomber"
                        />

                    <TextView
                        style="@style/BomberCountContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="20"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/MovieListItemCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/card_bad_bomber"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/BomberCountTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_bad_bomber"
                        />

                    <TextView
                        style="@style/BomberCountContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/holo_red_dark"
                        android:text="7"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>